--- a/IronBrew2 Deobfuscator/CLI/CLI.csproj
+++ b/IronBrew2 Deobfuscator/CLI/CLI.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MoonSharp" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IronBrew2 Deobfuscator\IronBrew2 Deobfuscator.csproj" />
   </ItemGroup>
 
