rewrote the whole thing.
it now reserializes to bytecode. + better vm handler finders, improved opcode matchers, + improved speed. + CLOSURE support

--- a/IronBrew2 Deobfuscator/IronBrew2 Deobfuscator/IronBrew2 Deobfuscator.csproj
+++ b/IronBrew2 Deobfuscator/IronBrew2 Deobfuscator/IronBrew2 Deobfuscator.csproj
@@ -8,6 +8,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="MoonSharp" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Bytecode\" />
   </ItemGroup>
 
 </Project>
